--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -206,7 +206,7 @@
   }
 }
 
-@media only screen and (max-width: 1023.999px) {
+@media only screen and (max-width: 1023px) {
   .td-content {
     margin: 0 auto;
   }
