--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -112,7 +112,7 @@
   }
 }
 
-@media only screen and (max-width: 1023.999px) {
+@media only screen and (max-width: 1023px) {
   .td-navbar {
     position: fixed;
     top: 0;
